5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1709_3035.log
== TEST (2019-05-02 11:24:44) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

print(sen(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(sen(x))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:56) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

print(sin(x))
-- OUTPUT:
0.7071067811865475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:01) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

print(sin(x))
-- OUTPUT:
0.7071067811865475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:11) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

print(cos(x))
-- OUTPUT:
0.7071067811865476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:15) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

print(cos(x))
-- OUTPUT:
0.7071067811865476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:27:38) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

if (0 <= x < 360):
	if (0 <= x < 90) or (180 <= x < 270):
		y = sin(x)
		print(y)
	elif (90 <= x < 180) or (270 <= x < 360):
		y = cos(x)
		print(y)
else:
	print("entrada invalida")
-- OUTPUT:
0.7071067811865475
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:28:07) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

if (0 <= x < 360):
	if (0 <= x < 90) or (180 <= x < 270):
		y = sin(x)
		print(round(y, 4))
	elif (90 <= x < 180) or (270 <= x < 360):
		y = cos(x)
		print(round(y, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:28:11) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

if (0 <= x < 360):
	if (0 <= x < 90) or (180 <= x < 270):
		y = sin(x)
		print(round(y, 4))
	elif (90 <= x < 180) or (270 <= x < 360):
		y = cos(x)
		print(round(y, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:28:37) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

if (0 <= x < 360):
	if (0 <= x < 90) or (180 <= x < 270):
		y = sin(x)
		print(round(y, 4))
	elif (90 <= x < 180) or (270 <= x < 360):
		y = cos(x)
		print(round(y, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:02) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

if (0 <= x < 360):
	if (0 <= x < 90) or (180 <= x < 270):
		y = sin(x)
		print(round(y, 4))
	elif (90 <= x < 180) or (270 <= x < 360):
		y = cos(x)
		print(round(y, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:14) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))
print(x1)
x = radians(x1)

if (0 <= x < 360):
	if (0 <= x < 90) or (180 <= x < 270):
		y = sin(x)
		print(round(y, 4))
	elif (90 <= x < 180) or (270 <= x < 360):
		y = cos(x)
		print(round(y, 4))
else:
	print("entrada invalida")
-- OUTPUT:
45.0
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:27) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))
print(sin(x1))
x = radians(x1)

if (0 <= x < 360):
	if (0 <= x < 90) or (180 <= x < 270):
		y = sin(x)
		print(round(y, 4))
	elif (90 <= x < 180) or (270 <= x < 360):
		y = cos(x)
		print(round(y, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.8509035245341184
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:30:11) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

if (0 <= x1 < 360):
	if (0 <= x1 < 90) or (180 <= x1 < 270):
		y = sin(x)
		print(round(y, 4))
	elif (90 <= x1 < 180) or (270 <= x1 < 360):
		y = cos(x)
		print(round(y, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:30:16) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

if (0 <= x1 < 360):
	if (0 <= x1 < 90) or (180 <= x1 < 270):
		y = sin(x)
		print(round(y, 4))
	elif (90 <= x1 < 180) or (270 <= x1 < 360):
		y = cos(x)
		print(round(y, 4))
else:
	print("entrada invalida")
-- OUTPUT:
0.7071
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:30:21) 
-- CODE:
from math import *

x1 = float(input("Valor de x: "))

x = radians(x1)

if (0 <= x1 < 360):
	if (0 <= x1 < 90) or (180 <= x1 < 270):
		y = sin(x)
		print(round(y, 4))
	elif (90 <= x1 < 180) or (270 <= x1 < 360):
		y = cos(x)
		print(round(y, 4))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.151741
-- TEST CASE 1:
---- input:
45.0
---- correct output:
0.7071
---- user output:
0.7071
-- TEST CASE 2:
---- input:
275.0
---- correct output:
0.0872
---- user output:
0.0872
-- TEST CASE 3:
---- input:
358.0
---- correct output:
0.9994
---- user output:
0.9994
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
